--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@netlify/plugin-nextjs": "^5.15.8",
         "@tailwindcss/forms": "^0.5.7",
         "@types/file-saver": "^2.0.7",
         "@types/node": "^20.11.0",
